commented copying of env flow
