# src/app.controller.ts
@@ -3,11 +3,15 @@ import { AppService } from './app.service';
 
 @Controller()
 export class AppController {
-  constructor(private readonly appService: AppService) {}
+  constructor(private readonly appService: AppService) { }
 
   @Get()
   getHello(): string {
     // return this.appService.getHello();
     return "hello";
+  }
+  @Get('/health')
+  health() {
+    return { status: 'ok' };
   }
 }
